examples/nameresolution/named_constructor.an
type T a b =
  x: a
  y: b

x = 4

t1 = T with x = 3, z = 5
t2 = T with y = 3.2, x

// Declarations should not leak from the named constructor
z = y * 2.0

// args: -e ast-r --no-color
// expected exit status: 1
// expected stdout:
// // id = c1m818_9305
// type T_c1m818_9305_0 a_1 b_2 =
//     x_?: a_1
//     y_?: b_2
// 
// // id = c1m818_8644
// x_c1m818_8644_0 = 4
// 
// // id = c1m818_4106
// t1_c1m818_4106_0 = T_c1m818_9305_0
// 
// // id = c1m818_4335
// t2_c1m818_4335_0 = T_c1m818_9305_0
// 
// // id = c1m818_1897
// z_c1m818_1897_0 = y_? *_c0m703_5387_2 2.0

// expected stderr:
// examples/nameresolution/named_constructor.an:7:8
//   | // error: Expected a newline after the top level item but found `with`
// 7 | t1 = T with x = 3, z = 5
//   |        ^^^^
// 8 | t2 = T with y = 3.2, x
// 
// examples/nameresolution/named_constructor.an:8:8
//  7 | t1 = T with x = 3, z = 5
//    | // error: Expected a newline after the top level item but found `with`
//  8 | t2 = T with y = 3.2, x
//    |        ^^^^
// 
// examples/nameresolution/named_constructor.an:11:5
// 10 | // Declarations should not leak from the named constructor
// 11 | z = y * 2.0	// error: `y` not found in scope
//    |     ^
// 
// Found 3 errors and 0 warnings

